style.css
:root{
  --headercolor: rgb(190, 237, 242);
  --hightlight: rgb(252, 248, 176);
  --contentbackground: rgb(198, 203, 208);
  --boxcolor: rgb(249 246 246);
  --navbarcolor:rgb(190, 237, 242);

}
*{
  margin: 0px;
  padding: 0px;
  font-family: 'Source Code Pro', monospace;
}
body{
  background-color: var(--navbarcolor);
  height: 100vh;
  width: 100vw;
}
.gridcontainer {
  height: 100vh;
  width: 100vw;
  display: grid;

  grid-template-columns: 1fr 6fr;
  grid-template-rows: 1fr 7fr;
}


/*HEADER*/
.header{
  background: var(--headercolor);
  grid-column: 2 / 8;
  grid-row: 1 / 2;
  padding-left: 10px;
  padding-right: 10px;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
} 
.headerrow1{
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-top: 13px;
}
.search{
  display: flex;
  align-items: center;
  padding: 5px;
}
#searchicon{
  width: 15px;
  padding: 2px;
  margin-right: 5px;
  cursor: pointer;
} 
.profile{
  display: flex;
  align-items: center;
  padding: 5px;
}
input{
  border-radius: 2px;
  border: 1px solid black;
}
.profile *{
  padding: 2px;
  margin-right: 8px;
}
#caticon{
  width: 30px;
  background-color: var(--hightlight);
  border-radius: 5px;
  cursor: pointer;
}
#caticon:hover{
  scale: 1.2;
  transition: all;
}
#alerticon{
  width: 21px;
    cursor: pointer;
}
#alerticon:hover{
  scale: 1.2;
  transition: all;
}
.username{
  font-size: 2rem;
}
.headerrow2{
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.welcome{
  display: flex;
  align-items: center;
  padding: 5px;
}
.welcometext{
  padding-left: 5px;
}
.uppertext{
  font-size: 1em;
}
.lowertext{
  font-size: 1.6em;
}
#caticonlarge{
  width: 43px;
  padding: 2px;
  background-color: var(--hightlight);
  border-radius: 5px;
  cursor: pointer;
}
#caticonlarge:hover{
  scale: 1.2;
  transition: all;
}
.buttonrow{
  padding: 5px;
  display: flex;
}
button{
  padding: 7px;
  margin-right: 5px;
  border-radius: 11px;
  outline: none;
  border: 0px solid black;
  font-size: 1em;
  background-color: var(--hightlight);
}
button:hover{
  scale: 1.1;
  transition: all;
}




/*NAVBAR*/
.navbar{
  background-color: var(--navbarcolor);
  grid-column: 1 /2;
  grid-row: 1 / 8;
  padding: 1vw;
}
.navlogo{
  display: flex;
  justify-content: center;
  align-items: center;
}
#cuteicon{
  width: 9vw;
  padding: 4px;
    cursor: pointer;
}
.navul>li{
  display: flex;
  align-items: center;
  margin-top: 0px;
}
.navul>li:hover{
  scale: 1.2;
  transition: all;
  font-weight: bold;
}

.navicons{
  width: 2rem;
  cursor: pointer;
}
.navlist1, .navlist2{
  font-size: 0.7rem;
}
.navlist1>ul, .navlist2>ul{
  list-style: none;
  font-size: 1.2vw;
  margin-left: 1vw;
}
.navlist1>ul {
  margin-top: 8vh;
}
.navlist2>ul {
  margin-top: 8vh;
}



/*CONTENT*/
.content{
  display: grid;
  grid-template-columns: 1.8fr 1.8fr 1fr;
  grid-template-rows: 1fr ;
  padding: 45px;
  background-color: var(--contentbackground);
  border-top-left-radius: 40px
}
.projects{
  grid-column: 1 /3;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 30px 1fr 1fr 1fr;
  gap: 30px;
}
.projectheader{
  grid-column: 1/3;
}
.projectheader, .announcementheader, .trendingheader{
  font-size: 1.5rem;
  font-weight: bold;
}
.box{
  border: 1px solid black;
  border-radius: 5px;
  background-color: var(--boxcolor);
  padding: 24px;
  border-left-color: var(--hightlight);
  border-left-width: 12px;
  border-left-style: solid;
}
.box1, .box2, .box3, .box4, .box5, .box6{
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  max-height: 21vh;
  overflow: scroll;
}
.box h2{
  font-size: 1.5rem;
}
.boxtext{
  font-size: 1rem;
  grid-row: 1 / 2;
  grid-column: 2 / 3;
}
.boxicons{
  grid-row: 2 / 3;
  grid-column: 2 /3;
  display: flex;
  align-items: center;
  justify-content: flex-end;
    cursor: pointer;
}
.icon:hover{
  scale: 1.2;
  transition: all;
}
.icon{
  width: 15px;
  margin-right: 5px;
  cursor: pointer;
}
.rightbar{
  display: grid;
  grid-template-rows: 30px 1fr 30px 1fr;
  gap: 30px;
  padding-left: 30px;
}
.announcementheader{
  text-align: center;
}
.announcementbox{
  border: 1px solid black;
  overflow: scroll;
  max-height: 230px;
}
.announcementbox h3{
  font-size: 1rem;
}
.anntext{
  font-size: 0.8rem;
}
.ann1, .ann2{
  padding-bottom: 0.6rem;
  border-bottom: 0.5px solid var(--contentbackground);
  margin-bottom: 0.6rem;
}
/* TRENDBOX*/
.trendingheader{
  grid-row: 3 / 4;
  text-align: center;
}
.trendbox{
  border: 1px solid black;
  display: flex;
  flex-direction: column;
  align-items: center;
  max-height: 230px;
  padding-left: 10%;
}
.trendimage{
  width: 3rem;
  height: 3rem;
  display: flex;  
  justify-content: center;
  align-items: center;
}
.trendimage:hover{
  scale: 1.2;
  transition: all;
}
.trend1, .trend2, .trend3, .trend4{
  display: flex;
  padding: 5px;
}
.trendtext{
  margin-left:1.5rem;
  display: flex;
    flex-direction: column;
    justify-content: center;
}
.trendline1{
  font-weight: bold;
}
.trendline2{
  font-size: 0.8rem;
}



@media only screen and (max-width: 900px) {
  .content{
    grid-template-columns: 1fr 1fr;
    border-top-right-radius: 40px;
  }
  .rightbar{
    padding-left: 0px;
  }

}
@media only screen and (max-width: 600px) {
  .content{
    grid-template-columns: 1fr;
  }
  .projects{
    grid-template-columns: 1fr;
    grid-column: 1 /2;
    grid-auto-flow: row;
    grid-auto-rows: 1fr;
  }
  .projectheader{
    grid-column: 1 / 2;
    font-weight: bold;
  }
  /* remove navbar */
  .header{
    grid-column: 1 / 3;
  }
  .content{
    grid-column: 1 /3;
  }
  .navbar{
    display: none;
  }
  .username{
    display: none;
  }
  #caticonlarge{
    display: none;
  }
  .buttonrow{
    display: flex;
    flex-direction: column;
  }
  button{
    margin: 2px;
  }
  .content{
    padding: 15px;
  }
}

